# somefetch

./: Cargo.toml  LICENSE  README.md  somefetch-0.1.0-2.1.x86_64.rpm
src/: main.rs
