[package]
name = "somefetch"
version = "0.2.1"
description = "Simple fetch for unix-like"
authors = ["UnixAwesomes <totalslinux@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "3.0.0"
